--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,12 +14,20 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li [routerLinkActiveOptions]="{exact:true}"  routerLinkActive="active"><a routerLink="">Product <span class="sr-only">(current)</span></a></li>
+          <li [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"><a routerLink="">Home</a></li>
+          <li   routerLinkActive="active"><a routerLink="/product">Product <span class="sr-only">(current)</span></a></li>
         <li routerLinkActive="active"><a  routerLink="/addproduct">Add Product</a></li>
         <li routerLinkActive="active"><a  routerLink="/users">Users</a></li>
         <li routerLinkActive="active"><a  routerLink="/signup">SignUp</a></li>
         <li routerLinkActive="active"><a  routerLink="/task">Task</a></li>
         <li routerLinkActive="active"><a  routerLink="/addtask">Add Task</a></li>
+        <li routerLinkActive="active"><a  routerLink="/customer">Customer</a></li>
+        <li routerLinkActive="active"><a  routerLink="/signup2">SignupReactiveDemo</a></li>
+        <li routerLinkActive="active"><a  routerLink="/demo">Demo</a></li>
+        <li routerLinkActive="active"><a  routerLink="/user1">User1</a></li>
+        <li routerLinkActive="active"><a  routerLink="/product1">Product1</a></li>
+        <li *ngIf="!isLoggedIn()" routerLinkActive="active"><a  routerLink="/login">Login</a></li>
+        <li *ngIf="isLoggedIn()" routerLinkActive="active"><a (click)="onLogOut()" >Log Out</a></li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
