--- a/src/app/taskdisplay/edittask/edittask.component.html
+++ b/src/app/taskdisplay/edittask/edittask.component.html
@@ -1,6 +1,6 @@
 <h1>Edit Task</h1>
 <div class="container">
-  <h1>Edit Task</h1>
+  <!-- <h1>Edit Task</h1> -->
     <form (ngSubmit)="onEditTask(f)"   #f="ngForm" >
       <div class="form-group">
         <Label>Id</Label>
