--- a/src/app/productdisplay/productdisplay.component.html
+++ b/src/app/productdisplay/productdisplay.component.html
@@ -1,11 +1,17 @@
 <div class="container">
   <div class="col-md-3">
-    <app-sidebar [categoryName]="name" (jinal)="onSideBarClick($event)"></app-sidebar>
+      <app-sidebar [categoryName]="name" (jinal)="onSideBarClick($event)"></app-sidebar>
 
   </div>
   <div class="col-md-9">
+      <div *ngIf="loading" class="progress">
+          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+            <span class="sr-only">45% Complete</span>
+          </div>
+        </div>
 
-    <div class="row">
+<h1>Product Display</h1>
+<div class="row">
       <div class="col-sm-6 col-md-4" *ngFor="let item of arr">
         <div class="thumbnail">
           <img [src]="item.pro_img" height="200px" width="200px" alt="...">
@@ -18,6 +24,8 @@
             <p>
               <a (click)="onProductDelete(item)" class="btn btn-primary" role="button">Delete</a>
               <a (click)="onProductEdit(item)" class="btn btn-primary" role="button">Edit</a>
+              <a (click)="onProductEditReactive(item)" class="btn btn-primary" role="button">     Edit Reactive </a>
+
             </p>
           </div>
         </div>
