--- a/src/app/userdisplay/userdisplay.component.html
+++ b/src/app/userdisplay/userdisplay.component.html
@@ -1,10 +1,16 @@
+<h1>search</h1>
+<div class="col-md-3">
+    <app-sidebar [categoryName]="" (jinal)="onSideBarClick($event)"></app-sidebar>
+  </div>
 <div class="container">
     <div>
-        <h1>search</h1>
-    <div class="col-md-3">
-        <app-sidebar [categoryName]="email" (jinal)="onSideBarClick($event)"></app-sidebar>
-      </div>
+
       <div class="col-md-9">
+          <div *ngIf="loading" class="progress">
+              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+              </div>
+            </div>
           <table class="table" >
 <thead>
   <th>Email</th>
@@ -19,6 +25,7 @@
     <td>{{item.user_mobile_no}}</td>
     <td><button class="btn btn-info" (click)="onUserDelete(item)" >Delete</button>
     <button class="btn btn-info" (click)="onUserEdit(item)"  >edit</button>
+    <button class="btn btn-info" (click)="onUserEditReactive(item)"  >Edit Reactive</button>
     </td>
   </tr>
 </tbody>
